--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,10 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.5",
     "jwt-decode": "^2.2.0",
-    "moment": "^2.22.2",
+    "moment": "^2.22.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "react-moment": "^0.8.4",
+    "react-moment": "^0.7.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
@@ -22,10 +22,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000",
-  "browserslist": [
-    ">0.2%",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "proxy": "http://localhost:5000"
 }
