--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "validator": "^9.4.1"
   },
   "devDependencies": {
-    "nodemon": "^1.18.7"
+    "nodemon": "^1.18.7",
+    "webpack-cli": "^3.1.2"
   }
 }
