--- a/client/package.json
+++ b/client/package.json
@@ -22,5 +22,8 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  "engines": {
+    "node": "8.12.0"
+  },
   "proxy": "http://localhost:5000"
 }
